--- a/app/views/work/work.html
+++ b/app/views/work/work.html
@@ -31,8 +31,18 @@
             <div class="tab-content" syle="height: 150px;">
                 <div role="tabpanel" style="overflow:auto;" class="tab-pane active" ng-show="system.view.tabPane1.processor===true">
                 	<div ng-repeat="processors in system.stock | filter:{type: 'processor'}" class="col-lg-12">
-            			<div ng-repeat="processor in processors.objs" style="padding: 10px" class="col-lg-2" ng-show="processor.quantity > 0">
-            				<div class="hardwareContainer" drag="processor" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, processor)">
+            			<div ng-repeat="processor in processors.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="processor.quantity <= 0"  class="hardwareContainer" drag="processor" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{processor.specs.modele}} <span class="badge" style="float:right;">{{processor.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Fréquence : </b> {{processor.specs.frequence}} Mhz<br>
+			                		<b>Socket : </b> {{processor.specs.socket}}<br>
+			                		<b>Indice de perf. : </b> {{processor.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{processor.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{processor.specs.prix_unit[processor.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="processor.quantity > 0"  class="hardwareContainer" drag="processor" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, processor)">
 		                		{{processor.specs.modele}} <span class="badge" style="float:right;">{{processor.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Fréquence : </b> {{processor.specs.frequence}} Mhz<br>
@@ -47,8 +57,19 @@
                 </div>
                 <div style="overflow:auto;" ng-show="system.view.tabPane1.memory===true">
                    <div ng-repeat="memories in system.stock | filter:{type: 'memory'}" class="col-lg-12">
-            			<div ng-show="memory.quantity > 0" ng-repeat="memory in memories.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="memory" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, memory)">
+            			<div ng-repeat="memory in memories.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="memory.quantity <= 0" class="hardwareContainer" drag="memory" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{memory.specs.modele}} <span class="badge" style="float:right;">{{memory.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Fréquence : </b> {{memory.specs.frequence}} Mhz<br>
+			                		<b>Capacité : </b> {{memory.specs.capacite}} GB<br>
+			                		<b>Format : </b> {{memory.specs.format}}<br>
+			                		<b>Indice de perf. : </b> {{memory.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{memory.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{memory.specs.prix_unit[memory.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="memory.quantity > 0" class="hardwareContainer" drag="memory" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, memory)">
 		                		{{memory.specs.modele}} <span class="badge" style="float:right;">{{memory.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Fréquence : </b> {{memory.specs.frequence}} Mhz<br>
@@ -64,8 +85,18 @@
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.disk===true">
                    <div ng-repeat="disks in system.stock | filter:{type: 'disk'}" class="col-lg-12">
-            			<div ng-show="disk.quantity > 0" ng-repeat="disk in disks.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="disk" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, disk)">
+            			<div ng-repeat="disk in disks.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="disk.quantity <= 0" class="hardwareContainer" drag="disk" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{disk.specs.modele}} <span class="badge" style="float:right;">{{disk.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>SSD : </b> {{disk.specs.ssd}}<br>
+			                		<b>Capacité : </b> {{disk.specs.capacite}} GB<br>
+			                		<b>Indice de perf. : </b> {{disk.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{disk.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{disk.specs.prix_unit[disk.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="disk.quantity > 0"  class="hardwareContainer" drag="disk" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, disk)">
 		                		{{disk.specs.modele}} <span class="badge" style="float:right;">{{disk.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>SSD : </b> {{disk.specs.ssd}}<br>
@@ -79,9 +110,21 @@
                 	</div>
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.motherboard===true">
-                  	 <div ng-repeat="motherboards in system.stock | filter:{type: 'motherboard'}" class="col-lg-12" disabled>
-            			<div ng-show="motherboard.quantity > 0" ng-repeat="motherboard in motherboards.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="motherboard" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, motherboard)">
+                  	 <div ng-repeat="motherboards in system.stock | filter:{type: 'motherboard'}" class="col-lg-12">
+            			<div ng-repeat="motherboard in motherboards.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="motherboard.quantity <= 0" class="hardwareContainer" style="background-color: rgba(200, 0, 0, .1);">
+	                  	 			{{motherboard.specs.modele}} <span class="badge" style="float:right;">{{motherboard.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Socket : </b> {{motherboard.specs.socket}}<br>
+			                		<b>Format DIMM : </b> {{motherboard.specs.format_dimm}}<br>
+			                		<b>Fréquence mémoire : </b> {{motherboard.specs.frequence_memoire}} Mhz<br>
+			                		<b>Ports SATA : </b> {{motherboard.specs.ports_sata}}<br>
+			                		<b>Indice de perf. : </b> {{motherboard.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{motherboard.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{motherboard.specs.prix_unit[motherboard.typeAchat] | currency:'€'}}<br>
+	                  	 		</div>
+	                  	 	</div>
+            				<div ng-show="motherboard.quantity > 0" class="hardwareContainer" drag="motherboard" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, motherboard)">
 		                		{{motherboard.specs.modele}} <span class="badge" style="float:right;">{{motherboard.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Socket : </b> {{motherboard.specs.socket}}<br>
@@ -98,8 +141,18 @@
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.alim===true">
                     <div ng-repeat="alims in system.stock | filter:{type: 'alim'}" class="col-lg-12">
-            			<div ng-show="alim.quantity > 0" ng-repeat="alim in alims.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="alim" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, alim)">
+            			<div ng-repeat="alim in alims.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="alim.quantity <= 0" class="hardwareContainer" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{alim.specs.modele}} <span class="badge" style="float:right;">{{alim.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Format : </b> {{alim.specs.format}}<br>
+			                		<b>Consommation : </b> {{alim.specs.consommation}} W<br>
+			                		<b>Indice de perf. : </b> {{alim.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{alim.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{alim.specs.prix_unit[alim.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="alim.quantity > 0" class="hardwareContainer" drag="alim" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, alim)">
 		                		{{alim.specs.modele}} <span class="badge" style="float:right;">{{alim.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Format : </b> {{alim.specs.format}}<br>
@@ -114,8 +167,19 @@
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.boxe===true">
                     <div ng-repeat="boxes in system.stock | filter:{type: 'boxe'}" class="col-lg-12">
-            			<div ng-show="boxe.quantity > 0"  ng-repeat="boxe in boxes.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="boxe" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, boxe)">
+            			<div ng-repeat="boxe in boxes.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="boxe.quantity <= 0" class="hardwareContainer" drag="boxe" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{boxe.specs.modele}} <span class="badge" style="float:right;">{{boxe.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Format : </b> {{boxe.specs.format}}<br>
+			                		<b>Couleur : </b> {{boxe.specs.couleur}}<br>
+			                		<b>Nb. ventilateurs : </b> {{boxe.specs.nb_ventilateurs}}<br>
+			                		<b>Indice de perf. : </b> {{boxe.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{boxe.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{boxe.specs.prix_unit[boxe.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="boxe.quantity > 0" class="hardwareContainer" drag="boxe" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, boxe)">
 		                		{{boxe.specs.modele}} <span class="badge" style="float:right;">{{boxe.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Format : </b> {{boxe.specs.format}}<br>
@@ -131,8 +195,17 @@
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.lecteur===true">
                     <div ng-repeat="lecteurs in system.stock | filter:{type: 'lecteur'}" class="col-lg-12">
-            			<div ng-show="lecteur.quantity > 0" ng-repeat="lecteur in lecteurs.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="lecteur" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, lecteur)">
+            			<div ng-repeat="lecteur in lecteurs.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="lecteur.quantity <= 0" class="hardwareContainer" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{lecteur.specs.modele}} <span class="badge" style="float:right;">{{lecteur.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Type : </b> {{lecteur.specs.type}}<br>
+			                		<b>Indice de perf. : </b> {{lecteur.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{lecteur.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{lecteur.specs.prix_unit[lecteur.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="lecteur.quantity > 0" class="hardwareContainer" drag="lecteur" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, lecteur)">
 		                		{{lecteur.specs.modele}} <span class="badge" style="float:right;">{{lecteur.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Type : </b> {{lecteur.specs.type}}<br>
@@ -146,8 +219,18 @@
                 </div>
                  <div style="overflow:auto;" ng-show="system.view.tabPane1.graphic===true">
                     <div ng-repeat="graphics in system.stock | filter:{type: 'graphic'}" class="col-lg-12">
-            			<div ng-show="graphic.quantity > 0" ng-repeat="graphic in graphics.objs" style="padding: 10px" class="col-lg-2">
-            				<div class="hardwareContainer" drag="graphic" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, graphic)">
+            			<div ng-repeat="graphic in graphics.objs" style="padding: 10px" class="col-lg-2">
+            				<div ng-show="graphic.quantity <= 0" class="hardwareContainer" drag="graphic" style="background-color: rgba(200, 0, 0, .1);">
+		                		{{graphic.specs.modele}} <span class="badge" style="float:right;">{{graphic.quantity}}</span>
+		                		<div style="text-align: left;"><br>
+			                		<b>Mémoire : </b> {{graphic.specs.memoire}} GB<br>
+			                		<b>Nb. sortie vidéo : </b> {{graphic.specs.nb_sortie_video}}<br>
+			                		<b>Indice de perf. : </b> {{graphic.specs.indice_perf}}%<br>
+			                		<b>Popularité : </b> {{graphic.specs.pop}}%<br>
+			                		<b>Prix payé : </b> {{graphic.specs.prix_unit[graphic.typeAchat] | currency:'€'}}<br>
+		                		</div>
+		                	</div>
+            				<div ng-show="graphic.quantity > 0" class="hardwareContainer" drag="graphic" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, graphic)">
 		                		{{graphic.specs.modele}} <span class="badge" style="float:right;">{{graphic.quantity}}</span>
 		                		<div style="text-align: left;"><br>
 			                		<b>Mémoire : </b> {{graphic.specs.memoire}} GB<br>
@@ -163,9 +246,24 @@
             </div>
 		</div>
 		<div class="well" style="text-align: center;overflow: auto;">
-			<div class="col-lg-offset-3 col-lg-6 buildingPanel" style="min-height: 300px !important;" ui-on-Drop="system._.onDrop($event, $data, 1)">
+			<div class="col-lg-3" style="padding-left: 10px;text-align: left;">
+			 	<div class="buildingPanel" style="height: 300px !important; overflow-y: auto">
+			 		<div class="buildPanelheader" style="margin-left: 1px; margin-right: 1px;text-align: center;">
+						Travail
+					</div>
+					<div class="text-center">
+						<img width="64px" class="img-circle" src="{{system.building.work.people.photo}}"><br>
+		        		{{system.building.work.people.name}}
+					</div><br>
+					<b>Budget : </b>entre <b>{{system.building.work.goal.budget_min | currency: '€'}}</b> et <b>{{system.building.work.goal.budget_max | currency: '€'}}</b><br>
+        			<b>Accepté le : </b>{{system._.displayTime(system.building.work.addedOn)}}<br>
+        			<b>Date du rendu : </b>{{system._.displayTime(system.building.work.deadline)}}<br>
+					<textarea class="form-control" disabled>Ordinateur puissant pour jouer aux derniers jeux en ultra</textarea>
+				</div>
+			</div>
+			<div class="col-lg-6 buildingPanel" style="min-height: 300px !important;" ui-on-Drop="system._.onDrop($event, $data, 1)">
 				<div class="buildPanelheader">
-					Plan de travail
+					Plan de travail<span style="float:right;">{{system._.getPrice() | currency:'€'}}</span>
 				</div>
 				<div ng-repeat="obj in system.building.workplan.objs" class="col-lg-4" style="padding: 5px !important;" ui-draggable="true" on-drop-success="system._.dropSuccessHandler($event, $index, obj)" drag="obj">
 					<div class="build build-hardware">
@@ -177,6 +275,19 @@
 							x{{obj.quantity}}
 						</span>
 					</div>
+				</div>
+			</div>
+			<div class="col-lg-3" style="padding-left: 10px">
+			 	<div class="buildingPanel" style="min-height: 300px !important; overflow-y: auto">
+			 		<div class="buildPanelheader" style="margin-left: 1px; margin-right: 1px;">
+						Action
+					</div>
+					<button class="btn btn-block btn-info">Installer un OS</button>
+					<hr>
+					<button class="btn btn-block btn-primary">Tester l'ordinateur</button>
+					<button class="btn btn-block btn-primary">Lancer un benchmarking</button>
+					<hr>
+					<button class="btn btn-block btn-success">Mettre de coté pour le client</button>
 				</div>
 			</div>
 		</div>
