--- a/app/views/settings/settings.html
+++ b/app/views/settings/settings.html
@@ -1,3 +1,92 @@
 <div class="col-lg-12">
-	Paramètres
+	<div class="col-lg-6">
+		<div class="buildingPanel">
+			<div class="buildPanelheader">
+				<i class="fa fa-headphones"></i> Audio
+			</div>
+			<div class="row">
+				<div class="col-lg-6" style="text-align: right;">Musique de fond : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-success btn-xs">Activée</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Volume musique de fond : </div>
+				<div class="col-lg-6" style="text-align: center;"><input type="range"  min="0" max="100" /></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Bruitages : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-success btn-xs">Activée</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Volume bruitages : </div>
+				<div class="col-lg-6" style="text-align: center;"><input type="range"  min="0" max="100" /></div><br><br>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6">
+		<div class="buildingPanel">
+			<div class="buildPanelheader">
+				<i class="fa fa-keyboard-o"></i> Commandes/Raccourcis
+			</div>
+			<div class="row">
+				<div class="col-lg-6" style="text-align: right;">Play/pause : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-default btn-xs">[ 0 ] - Réassigner</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Avancée rapide : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-default btn-xs">[ 1 ] - Réassigner</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Avancée <strong>très</strong> rapide : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-default btn-xs">[ 2 ] - Réassigner</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Accepter livraison fournisseur : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-default btn-xs">[ k ] - Réassigner</button></div><br><br>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6" style="margin-top: 15px;">
+		<div class="buildingPanel">
+			<div class="buildPanelheader">
+				<i class="fa fa-cubes"></i> Autre
+			</div>
+			<div class="row">
+				<div class="col-lg-6" style="text-align: right;">Multijoueur (bêta) : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-danger btn-xs">Désactivé</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Méthode de sauvegarde : </div>
+				<div class="col-lg-6" style="text-align: center;">
+					<div class="btn-group" role="group" aria-label="...">
+					  <button type="button" class="btn btn-success btn-xs">Session locale</button>
+					  <button type="button" class="btn btn-default btn-xs">Fichier JSON</button>
+					  <button type="button" class="btn btn-default btn-xs">En ligne</button>
+					</div>
+				</div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Intervale de sauvegarde automatique : </div>
+				<div class="col-lg-6" style="text-align: center;">
+					<select class="form-control input-sm">
+						<option value="5">5 minutes</option>
+						<option value="10">10 minutes</option>
+						<option value="20">20 minutes</option>
+						<option value="30">30 minutes</option>
+						<option value="45">45 minutes</option>
+						<option value="60">1 heure</option>
+					</select>
+				</div><br><br>
+				<div class="col-lg-6" style="text-align: right;">Délai notification : </div>
+				<div class="col-lg-6" style="text-align: center;">
+					<select class="form-control input-sm">
+						<option value="5">5 secondes</option>
+						<option value="10">10 secondes</option>
+						<option value="20">20 secondes</option>
+						<option value="60">Jamais</option>
+					</select>
+				</div><br><br>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6" style="margin-top: 15px;">
+		<div class="buildingPanel">
+			<div class="buildPanelheader">
+				<i class="fa fa-terminal"></i> Debug
+			</div>
+			<div class="row">
+				<div class="col-lg-6" style="text-align: right;">_money_setter_ : </div>
+				<div class="col-lg-6" style="text-align: center;"><input class="form-control input-sm" placeholder="How much € do u want ?"></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">_allow_no_intervention_ : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-danger btn-xs">False</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">_free_shopping_ : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-danger btn-xs">False</button></div><br><br>
+				<div class="col-lg-6" style="text-align: right;">_smart_mode_ : </div>
+				<div class="col-lg-6" style="text-align: center;"><button class="btn btn-danger btn-xs">False</button></div><br><br>
+			</div>
+		</div>
+	</div>
 </div>
