--- a/app/app.css
+++ b/app/app.css
@@ -10,6 +10,53 @@
     z-index: 99999;
 }
 
+.phoneBase {
+    background-color: black;
+    height: 500px;
+    border-radius: 5%;
+    padding: 10px;
+    color: white;
+}
+
+.forcedSizeImage {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.bottomBarHomeScreen {
+    bottom: 44px;
+    height: 15%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    width: 85%;
+    left: 24px;
+}
+
+.phoneStatusBar {
+    width: 100%;
+    height: 20px;
+    background-color: rgba(0, 0, 0, .0);
+    margin-top: -7px;
+    font-size: 9px;
+}
+
+.phoneHp {
+    height: 7%;
+}
+
+.phoneScreen {
+    height: 86%;
+    background-image: url('http://www.designbolts.com/wp-content/uploads/2015/07/low-poly-iphone-6-wallpaper.jpg');
+    background-size:     cover;
+    padding: 5px;
+}
+
+.phoneButton {
+    padding: 5px;
+    text-align: center;
+    height: 7%;
+}
+
 .noLink {
     text-decoration: none;
     color: #333;
@@ -87,6 +134,15 @@
   font-size: 12px !important;
   line-height: 1.428571429 !important;
   border-radius: 15px !important;
+}
+
+.btn-circle.btn-lg {
+  width: 30px;
+  height: 30px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
 }
 
 .caretClientContainer:hover {
