--- a/app/views/customers/customers.html
+++ b/app/views/customers/customers.html
@@ -10,21 +10,4 @@
 		</div>
 	</div>
 </div>
-<!-- ng-show="system._.phoneIsActive" -->
-<div ng-include src="'views/phone/phone.html'"></div>
-
-<!-- <div class="backdrop">
-	<div style="margin-top: 5%; opacity: .85" class="col-lg-2 col-lg-offset-5" ng-controller="phoneCtrl">
-		<div class="phoneBase">
-			<div class="phoneHp">
-
-			</div>
-			<div class="phoneScreen">
-
-			</div>
-			<div class="phoneButton">
-				<button ng-click="homeButtonPressed()" class="btn btn-default btn-circle btn-lg">O</button>
-			</div>
-		</div>
-	</div>
-</div> -->
+<div ng-show="system._.phoneIsActive" ng-include src="'views/phone/phone.html'"></div>
