--- a/app/views/work/work.html
+++ b/app/views/work/work.html
@@ -336,7 +336,8 @@
 						<div class="col-lg-6"><button class="btn btn-success btn-block">Exécuter un benchmark</button></div>
 						<div class="col-lg-6"><button class="btn btn-success btn-block">Jouer à un jeu PC</button></div><br><br>
 						<div class="col-lg-6"><button class="btn btn-success btn-block">Overclocker</button></div>
-						<div class="col-lg-6"><button class="btn btn-info btn-block">Eteindre</button></div>
+
+						<div class="col-lg-6"><button class="btn btn-info btn-block">Installer spyware</button></div>
 					</div>
 				</div>
 			</div>
